fix(theme:layout-default): fix RTL will misalignment in medium screen (#1469)

--- a/packages/theme/layout-default/style/_aside.less
+++ b/packages/theme/layout-default/style/_aside.less
@@ -81,6 +81,19 @@
         left: 0;
       }
     }
+    @media (max-width: @mobile-max) {
+      @{alain-default-prefix}__content {
+        transform: translate3d(-@alain-default-aside-wd, 0, 0);
+      }
+      @{alain-default-prefix}__collapsed {
+        @{alain-default-prefix}__aside {
+          transform: translate3d(100%, 0, 0);
+        }
+        @{alain-default-prefix}__content {
+          transform: translateZ(0);
+        }
+      }
+    }
   }
 }
 .layout-default-aside-rtl-mixin(@rtl-enabled);
