--- a/packages/theme/layout-default/style/fix/_reuse-tab.less
+++ b/packages/theme/layout-default/style/fix/_reuse-tab.less
@@ -1,3 +1,6 @@
+@alain-default-aside-width: @alain-default-aside-wd + @alain-default-content-padding;
+@alain-default-aside-collapsed-width: @alain-default-aside-collapsed-wd + @alain-default-content-padding;
+
 @{reuse-tab-prefix} {
   margin: 0 -@alain-default-content-padding 0 -@alain-default-content-padding;
 }
@@ -7,14 +10,14 @@
     position: fixed;
     top: @alain-default-header-hg;
     right: @alain-default-content-padding;
-    left: @alain-default-aside-wd + @alain-default-content-padding;
+    left: @alain-default-aside-width;
     z-index: @zindex-fixed + 1;
   }
 }
 
 @{alain-default-prefix}__collapsed {
   @{reuse-tab-prefix} {
-    left: @alain-default-aside-collapsed-wd + @alain-default-content-padding;
+    left: @alain-default-aside-collapsed-width;
   }
 }
 
@@ -44,3 +47,22 @@
     }
   }
 }
+
+.layout-default-reuse-tab-rtl-mixin(@enabled) when(@enabled=true) {
+  [dir='rtl'] {
+    @{alain-default-prefix}__fixed {
+      @{reuse-tab-prefix} {
+        right: @alain-default-aside-width;
+        left: @alain-default-content-padding;
+      }
+    }
+
+    @{alain-default-prefix}__collapsed {
+      @{reuse-tab-prefix} {
+        right: @alain-default-aside-collapsed-width;
+        left: 0;
+      }
+    }
+  }
+}
+.layout-default-reuse-tab-rtl-mixin(@rtl-enabled);
